[package]
name = "async-reverse-proxy"
version = "0.5.2-dev"
authors = [
  "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
  "Felipe Noronha <felipenoris@gmail.com>",
  "Jan Kantert <jan-hyper-reverse-proxy@kantert.net>",
]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2024"

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[[bench]]
name="internal"
harness = false

[dependencies]
cfg-if = "1.0.4"
hyper = { version = "0.14.32", features = ["client"] }
realm_io = "0.5.3"
tracing = "0.1.41"
tokio = { version = "1.48.0", optional = true }

[dev-dependencies]
hyper = { version = "0.14.32", features = ["server"] }
futures = "0.3.31"
async-trait = "0.1.89"
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
tokio-test = "0.4.4"
test-context = "0.1.6"
tokiotest-httpserver = "0.2.1"
hyper-trust-dns = { version = "0.4.2", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki"
] }
rand = "0.8.5"
tungstenite = "0.17"
url = "2.5"
criterion = "0.7.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
smol = []

__bench=[]
